# ECG-KD-library

./: README.md  pyproject.toml
ecg_kd/data/: loader.py
ecg_kd/losses/: torch_losses.py
ecg_kd/models/tf/: heads.py
ecg_kd/models/torch/: datasets.py  heads.py  moment_utils.py
ecg_kd/training/: cv_utils.py
scripts/: train_endtoend_all.py  train_endtoend_cv.py  train_ensemble_all.py  train_ensemble_cv.py  train_full_ft_all.py  train_full_ft_cv.py  train_head_only_all.py  train_head_only_cv.py  train_partial_all.py  train_partial_cv.py
